# 7aigent

./: .7aigent-init.md.example  .gitignore  AGENTS.md  README.md  flake.nix  test_manual.py
agent/: .gitignore  Cargo.toml  README.md  default.nix  package-lock.json  package.json  spago.yaml
agent/config/: compaction_prompt.md  config.toml  initial_message.md  reflection_prompt.md  startup.jl  stdin_prompt.md  steering_message.md  summary_message.md  system_prompt.md  timeout_prompt.md  user_message.md
agent/src/: Main.purs  agent.rs  budget.rs  cli.rs  config.rs  container.rs  context.rs  format.rs  initial_messages.rs  interactive.rs  lib.rs  main.rs  parser.rs  session.rs  templates.rs  types.rs  ui.rs
agent/templates/: config.toml
agent/test/: CLISpec.purs  CompactionSpec.purs  ConfigSpec.js  ConfigSpec.purs  ControllerSpec.purs  GitCommitSpec.purs  GitDiffSpec.purs  GitStageSpec.purs  InitialMessageSpec.purs  InterruptionSpec.purs  JuliaDefsSpec.purs  JupyterSpec.purs  Main.purs  McpSpec.purs  OutputThresholdSpec.purs  ReactStepSpec.purs  ReflectionSpec.purs  ReplSerializeSpec.purs  RetrySpec.purs  RoundStepSpec.purs  SandboxInputSpec.js  SandboxInputSpec.purs  SandboxPreflightSpec.js  SandboxPreflightSpec.purs  SessionListingSpec.purs  SessionLogSpec.purs  SessionResumeSpec.purs  StartupSpec.purs  StdinRequestSpec.purs  SteeringSpec.purs  SummaryRequestSpec.purs  TemplateSpec.purs  TimeoutSpec.purs  ToolDefsSpec.purs  ToolExecutionSpec.purs  ToolInputSpec.purs  ToolStepSpec.purs  WireFormatSpec.js  WireFormatSpec.purs
agent/tests/: integration_test.rs  test_auxiliary_llm.rs
orchestrator/: README.md  pyproject.toml
orchestrator/orchestrator/: __init__.py  __main__.py  auxiliary.py  communication.py  core_types.py  declarative.py  executor.py  interactive.py  loader.py  main.py  protocol.py  screen.py  tui.py
orchestrator/tests/: __init__.py  test_bash_environment.py  test_communication.py  test_core_types.py  test_declarative.py  test_editor_environment.py  test_executor.py  test_indentation.py  test_interactive.py  test_loader.py  test_minimal_orchestrator.py  test_parser.py  test_parser_executor_integration.py  test_python_environment.py  test_screen.py  test_summarizer.py  test_system_environment.py  test_windows.py
(+328 files in other folders)
