[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "7aigent-orchestrator"
version = "0.1.0"
description = "7aigent orchestrator - manages environments inside container"
readme = "README.md"
requires-python = ">=3.13"
authors = [
    {name = "7aigent contributors"},
]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
]

dependencies = [
    "pexpect>=4.8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "hypothesis>=6.0.0",
    "black>=24.0.0",
    "isort>=5.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

[project.scripts]
orchestrator = "orchestrator.__main__:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["orchestrator*"]

[tool.black]
line-length = 88
target-version = ["py313"]

[tool.isort]
profile = "black"
line_length = 88

[tool.ruff]
line-length = 88
target-version = "py313"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
